GNOME Bugzilla – Bug 668682
[0.11] [playbin] Using playbin's suburi property causes the video to not play
Last modified: 2012-09-12 09:12:04 UTC
+++ This bug was initially created as a clone of Bug #667571 +++ When taking these two files: http://samples.mplayerhq.hu/sub/thief.avi http://samples.mplayerhq.hu/sub/thief.sub After fixing the caps issue from 667571 (typefound caps being stuck at a non linked pad), the video still does not play. ERROR: from element /GstPlayBin:playbin0/GstPlaySink:playsink0: Can't play a text file without video or visualizations. playbin2 tries to start playing before waiting for the A/V pads to be added.
Created attachment 206120 [details] [review] subtitleoverlay: add a couple drive by const
Created attachment 206121 [details] [review] subtitleoverlay: fix probing of raw video caps They're now video/x-raw, not video/x-raw-* anymore.
Created attachment 206122 [details] [review] playbin2: fix old style raw A/V caps They're now {audio,video}/x-raw, not {audio,video}/x-raw-*
What I found so far. This gets us further, but not there yet. The textoverlay is now autoplugged, which is good. Comparing the logs with what happens in 0.10, we should get the subtitleoverlay pad blocked callback to be called, but this does not happen here, but reasons still unknown.
Comment on attachment 206121 [details] [review] subtitleoverlay: fix probing of raw video caps Make this g_str_equals() or strcmp() or whatever and then push, it's definitely correct and a step in the right direction even if it doesn't fix this bug.
Care to push those patches?
Pushed, with Sebastian's comment addressed. For avoidance of doubt, this does not fix the issue yet, merely causes the failure to occur later.
Could this be because subparse does not send a GAP event ?
Works fine for me (assuming the really small fonts are expected)
> Works fine for me (assuming the really small fonts are expected) Well of course, because you fixed it ! (Thanks) :) Small fonts are expected for high-res video (see bug #370715). Would be nice to mention the bug number/link in the commit messages next time. Still some issues switching off subs via the totem menu, but not so important imho, it's a separate bug. commit 5f4bd0a4e896140df8851d412fb483b295e14a59 Author: Edward Hervey <edward.hervey@collabora.co.uk> Date: Tue Sep 11 16:28:26 2012 +0200 subparse: Call default query handler commit b5090d2acaa736b20941b94cc248b006df6a7cf8 Author: Edward Hervey <edward.hervey@collabora.co.uk> Date: Tue Sep 11 16:27:24 2012 +0200 streamsynchronizer: Don't wait on non-time streams streams with non-TIME segments will not have timestamps ... ... and therefore will never unblock the other streams. Fixes blocking issue when using playbin suburi feature
I'm pretty sure there is still a race condition in streamsynchronizer with external subtitles, see http://pastebin.com/ugeFae9m for some logs with a working and a non-working case. The video and audio streams will not get unblocked if segment from subparse is received after audio and video stream-start events.