subtitleoverlay: add a couple drive by const

https://bugzilla.gnome.org/show_bug.cgi?id=668682